--- a/.gitmodules
+++ b/.gitmodules
@@ -25,12 +25,21 @@
 [submodule "src/nlp-py-tutorial"]
 	path = src/nlp-py-tutorial
 	url = https://github.com/c-w-m/nlp-py-tutorial.git
-[submodule "src/pnlp"]
-	path = src/pnlp
-	url = https://github.com/c-w-m/pnlp.git
 [submodule "src/tnlp"]
 	path = src/tnlp
 	url = https://github.com/c-w-m/tnlp.git
 [submodule "src/colab"]
 	path = src/colab
 	url = https://github.com/c-w-m/colab.git
+[submodule "src/tensorflow"]
+	path = src/tensorflow
+	url = https://github.com/c-w-m/tensorflow.git
+[submodule "src/tensorflow_docs"]
+	path = src/tensorflow_docs
+	url = https://github.com/c-w-m/tensorflow_docs.git
+[submodule "src/pnlp"]
+	path = src/pnlp
+	url = https://github.com/c-w-m/pnlp.git
+[submodule "src/snorkel-tutorials"]
+	path = src/snorkel-tutorials
+	url = https://github.com/c-w-m/snorkel-tutorials.git
