--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,11 @@
 	path = doc/hgf-awesome-papers
 	url = https://github.com/c-w-m/hgf-awesome-papers.git
 
+# kaggle competition: Colerridge Initiative
+[submodule "src/nlp-w2d"]
+	path = src/nlp-w2d
+	url = https://github.com/c-w-m/nlp-w2d.git
+
 # src
 [submodule "src/anlp-tf2"]
 	path = src/anlp-tf2
@@ -10,6 +15,9 @@
 [submodule "src/btap"]
 	path = src/btap
 	url = https://github.com/c-w-m/btap.git
+[submodule "src/colab"]
+	path = src/colab
+	url = https://github.com/c-w-m/colab.git
 
 # Hugging Face code
 [submodule "src/hgf-datasets"]
@@ -22,30 +30,38 @@
 	path = src/hgf-transformers
 	url = https://github.com/c-w-m/hgf-transformers.git
 
-[submodule "src/nlp-py-tutorial"]
-	path = src/nlp-py-tutorial
-	url = https://github.com/c-w-m/nlp-py-tutorial.git
-[submodule "src/tnlp"]
-	path = src/tnlp
-	url = https://github.com/c-w-m/tnlp.git
-[submodule "src/colab"]
-	path = src/colab
-	url = https://github.com/c-w-m/colab.git
-[submodule "src/tensorflow"]
-	path = src/tensorflow
-	url = https://github.com/c-w-m/tensorflow.git
-[submodule "src/tensorflow_docs"]
-	path = src/tensorflow_docs
-	url = https://github.com/c-w-m/tensorflow_docs.git
-[submodule "src/snorkel-tutorials"]
-	path = src/snorkel-tutorials
-	url = https://github.com/c-w-m/snorkel-tutorials.git
-[submodule "src/pnlp"]
-	path = src/pnlp
-	url = https://github.com/c-w-m/pnlp.git
+# kaggle examples
 [submodule "src/kaggle-demo-retinaface"]
 	path = src/kaggle-demo-retinaface
 	url = https://github.com/c-w-m/kaggle-demo-retinaface.git
 [submodule "src/kaggle-demo-web"]
 	path = src/kaggle-demo-web
 	url = https://github.com/c-w-m/kaggle-demo-web.git
+
+# ebooks and associated package/demo
+[submodule "src/nlp-py-tutorial"]
+	path = src/nlp-py-tutorial
+	url = https://github.com/c-w-m/nlp-py-tutorial.git
+
+[submodule "src/pnlp"]
+	path = src/pnlp
+	url = https://github.com/c-w-m/pnlp.git
+[submodule "src/snorkel-tutorials"]
+	path = src/snorkel-tutorials
+	url = https://github.com/c-w-m/snorkel-tutorials.git
+[submodule "src/tensorflow"]
+	path = src/tensorflow
+	url = https://github.com/c-w-m/tensorflow.git
+[submodule "src/tensorflow_docs"]
+	path = src/tensorflow_docs
+	url = https://github.com/c-w-m/tensorflow_docs.git
+[submodule "src/textacy"]
+	path = src/textacy
+	url = https://github.com/c-w-m/textacy.git
+[submodule "src/tnlp"]
+	path = src/tnlp
+	url = https://github.com/c-w-m/tnlp.git
+[submodule "src/web_scraping"]
+	path = src/web_scraping
+	url = https://github.com/c-w-m/web_scraping.git
+
